Add MIT license

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "Genymobile"
   ],
   "author": "Genymotion Cloud <genymotion-cloud@genymobile.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Genymobile/genymotion-saas-github-action/issues"
   },
