--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,3 +109,31 @@ jobs:
           email: ${{ secrets.GMSAAS_EMAIL }}
           password: ${{ secrets.GMSAAS_PASSWORD }}
           recipe_uuid: ${{ matrix.recipe_uuid }}
+
+
+  test-integration-install_configure_gmsaas:
+    runs-on: ubuntu-latest
+
+    name: Only install and configure gmsaas
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10.11"
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
+      - name: Genymotion
+        uses: ./
+        with:
+          email: ${{ secrets.GMSAAS_EMAIL }}
+          password: ${{ secrets.GMSAAS_PASSWORD }}
