--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   },
   "homepage": "https://github.com/Genymobile/genymotion-saas-github-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.4"
+    "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.0.4",
+    "@actions/github": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^7.18.0"
